--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@ant-design/icons": "4.2.2",
+    "antd": "4.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
