--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "4.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
