--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ant-design/icons": "4.2.2",
     "antd": "4.6.0",
+    "lodash": "4.17.20",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.2.0",
