--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
-  "keywords": ["react", "starter"],
+  "keywords": [
+    "react",
+    "starter"
+  ],
   "main": "src/index.js",
   "dependencies": {
     "@ant-design/icons": "4.2.2",
     "antd": "4.6.0",
     "lodash": "4.17.20",
+    "moment": "2.29.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.2.0",
@@ -24,5 +28,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
