--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ant-design/icons": "4.2.2",
     "antd": "4.6.0",
+    "js-base64": "3.5.2",
     "lodash": "4.17.20",
     "moment": "2.29.1",
     "react": "16.12.0",
